# sb3-extra-buffers

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  example.py  example_train.py  example_train_replay.py  example_train_rollout.py  example_watch.py  example_watch_replay.py  example_watch_rollout.py  pyproject.toml  setup.py  upload_pypi.sh
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: code-format.yml  python-publish.yml  tests.yml
docs/: algorithms.rst  benchmarks.rst  citation.rst  conf.py  examples.rst  index.rst  quickstart.rst  requirements.txt  speed.rst  usage.rst  validation.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: compressed.rst  gpu_buffers.rst  index.rst  recording.rst  training_utils.rst  vec_buf.rst
examples/: example_eval_atari.py  example_eval_memory_loading.py  example_eval_memory_saving.py  example_eval_replay.py  example_eval_rollout.py  example_eval_rollout_mspacman.py  example_train_atari.py  example_train_gpu_replay.py  example_train_gpu_rollout.py  example_train_replay copy.py  example_train_replay.py  example_train_replay_raw.py  example_train_rollout.py  example_train_rollout_mspacman.py  example_train_rollout_mspacman_raw.py  example_train_rollout_raw.py  example_watch_atari.py  example_watch_gpu_replay.py  example_watch_gpu_rollout.py  example_watch_replay.py  example_watch_rollout.py  example_watch_rollout_mspacman.py
sb3_extra_buffers/: __init__.py  current_version.py  logging.py  types.py
sb3_extra_buffers/compressed/: __init__.py  base.py  compressed_array.py  compressed_replay.py  compressed_rollout.py  compression_methods.py  utils.py
sb3_extra_buffers/compressed/compression_methods/: __init__.py  compression_methods.py  compression_methods_lz4.py  compression_methods_numba.py  compression_methods_zstd.py
sb3_extra_buffers/gpu_buffers/: __init__.py  base.py  gpu_replay.py  gpu_rollout.py  metadata.py  observation_store.py  raw_buffer.py  size_estimation.py  utils.py
sb3_extra_buffers/gpu_buffers/compression_methods/: __init__.py  compression_methods.py  compression_methods_zstd.py
sb3_extra_buffers/recording/: __init__.py  base.py  dummy_record_buffers.py  record_buffer.py  utils.py
sb3_extra_buffers/training_utils/: __init__.py  atari.py  buffer_warmup.py  eval_model.py
sb3_extra_buffers/vec_buf/: __init__.py  buffers.py
scripts/: fit_heap_heuristic.py  mutate_badge.py
tests/: feat_extract.py  test_compressed_buffer.py  test_compressed_replay.py  test_compressed_rollout.py  test_gpu_buffer.py  test_heap_estimate.py  test_raw_buffer.py
